[package]
name = "laplace_eq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gnuplot = "0.0.39"
plotters = "0.3.5"
anyhow = { version = "1.0.75", features = ["backtrace"] }
log = "0.4.20"
env_logger = "0.10.0"